packages/gatsby/src/bootstrap/__tests__/__snapshots__/resolve-module-exports.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resolve module exports Show meaningful error message for invalid JavaScript 1`] = `
Array [
  "Syntax error in \\"/bad/file\\":
'Const declarations' require an initialization value. (1:13)
> 1 | const exports.blah = () = }}}
    |             ^",
]
`;
